--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.26.2",
-    "react-simple-typewriter": "^5.0.1"
+    "react-simple-typewriter": "^5.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^6.8.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
