--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   },
   "dependencies": {
     "@iconify/react": "^5.0.2",
-    "@react-three/drei": "^9.114.0",
-    "@react-three/fiber": "^8.17.9",
     "framer-motion": "^11.5.6",
     "lucide-react": "^0.447.0",
     "prop-types": "^15.8.1",
@@ -20,8 +18,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.26.2",
-    "react-simple-typewriter": "^5.0.1",
-    "three": "^0.169.0"
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
