--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@iconify/react": "^5.0.2",
+    "dotenv": "^16.4.5",
+    "emailjs": "^4.0.3",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^11.5.6",
     "lucide-react": "^0.447.0",
     "prop-types": "^15.8.1",
