--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.26.2",
     "react-simple-typewriter": "^5.0.1",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "xsuite-digital": "file:"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
